[package]
name = "acr_crash_table"
version = "0.1.0"
authors = ["Mark F Rodriguez <macrod@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "~1.1"
log = "~0.4"
simplelog = "^0.7.4"
clap = "~2.33"
crossterm = "~0.11"
